improved pinn and some extra automation

--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -2,7 +2,7 @@
 <script>
     MathJax = {
         tex: {
-            displayMath: [['\\[', '\\]'], ['$$', '$$']],  // block
+            displayMath: [['\\[', '\\]']],  // block
             inlineMath: [['\\(', '\\)']]                  // inline
         }
     };
