--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,12 +7,12 @@
 
         <div class="nav-links">
 
-            <div class="dark-theme-toggle">
+            <!-- <div class="dark-theme-toggle">
                 <span class="sr-only dark-theme-toggle-screen-reader-target">theme</span>
                 <a aria-hidden="true" role="switch">
                     <span class="theme-toggle-icon" data-feather="moon"></span>
                 </a>
-            </div>
+            </div> -->
 
             <span class="nav-icons-divider"></span>
 
@@ -33,7 +33,6 @@
                 </a>
             </div>
 
-            <!-- For mobile -->
             <ul class="nav-hamburger-list visibility-hidden">
                 {{ range .Site.Menus.main }}
                 <li class="nav-item">
