--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -139,7 +139,7 @@ img {
 
 .header .header-nav {
     height: 50px;
-    background-color: inherit;
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .header-nav .avatar {
